Add two open slides in the bib

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 10252f8c255b1d4c9bb5b2399b10d78feafd9dc7
+% Commit: 9766d620afd3a4a5a628a687329e29ef6fc13e90
 % Zenodo: https://zenodo.org/records/10143431
 % DOI:    10.5281/zenodo.10143431
 % Date:   2023-11-25
@@ -3145,22 +3145,6 @@
 }
 @article{balan.tudor:10:stochastic,
   author        = {Balan, Raluca M. and Tudor, Ciprian A.},
-  title         = {Stochastic heat equation with multiplicative fractional-colored noise},
-  journal       = {J. Theoret. Probab.},
-  fjournal      = {Journal of Theoretical Probability},
-  volume        = {23},
-  year          = {2010},
-  number        = {3},
-  pages         = {834--870},
-  issn          = {0894-9840},
-  mrclass       = {60H15 (60G22 60H05)},
-  mrnumber      = {2679959},
-  mrreviewer    = {David Nualart},
-  doi           = {10.1007/s10959-009-0237-3},
-  url           = {https://doi.org/10.1007/s10959-009-0237-3}
-}
-@article{balan.tudor:10:stochastic*1,
-  author        = {Balan, Raluca M. and Tudor, Ciprian A.},
   title         = {The stochastic wave equation with fractional noise: a random field approach},
   journal       = {Stochastic Process. Appl.},
   fjournal      = {Stochastic Processes and their Applications},
@@ -3174,6 +3158,22 @@
   mrreviewer    = {Llu\'{i}s Quer-Sardanyons},
   doi           = {10.1016/j.spa.2010.08.006},
   url           = {https://doi.org/10.1016/j.spa.2010.08.006}
+}
+@article{balan.tudor:10:stochastic*1,
+  author        = {Balan, Raluca M. and Tudor, Ciprian A.},
+  title         = {Stochastic heat equation with multiplicative fractional-colored noise},
+  journal       = {J. Theoret. Probab.},
+  fjournal      = {Journal of Theoretical Probability},
+  volume        = {23},
+  year          = {2010},
+  number        = {3},
+  pages         = {834--870},
+  issn          = {0894-9840},
+  mrclass       = {60H15 (60G22 60H05)},
+  mrnumber      = {2679959},
+  mrreviewer    = {David Nualart},
+  doi           = {10.1007/s10959-009-0237-3},
+  url           = {https://doi.org/10.1007/s10959-009-0237-3}
 }
 @article{balan.yuan:22:spatial,
   author        = {Balan, Raluca M. and Yuan, Wangjun},
@@ -11563,7 +11563,34 @@
   doi           = {10.1090/conm/307/05265},
   url           = {https://doi.org/10.1090/conm/307/05265}
 }
-@incollection{bourgain:02:on,
+@article{bourgain:02:on,
+  author        = {Bourgain, J.},
+  title         = {On the distributions of the {F}ourier spectrum of {B}oolean functions},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {131},
+  year          = {2002},
+  pages         = {269--276},
+  issn          = {0021-2172,1565-8511},
+  mrclass       = {43A75 (42A38)},
+  mrnumber      = {1942312},
+  mrreviewer    = {Colin\ C.\ Graham},
+  doi           = {10.1007/BF02785861},
+  url           = {https://doi.org/10.1007/BF02785861}
+}
+@incollection{bourgain:02:on*1,
+  author        = {Bourgain, J.},
+  title         = {On the distribution of {D}irichlet sums. {II}},
+  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
+  pages         = {87--109},
+  publisher     = {A K Peters, Natick, MA},
+  year          = {2002},
+  isbn          = {1-56881-126-8},
+  mrclass       = {11M26},
+  mrnumber      = {1956220},
+  mrreviewer    = {Jerzy\ Kaczorowski}
+}
+@incollection{bourgain:02:on*2,
   author        = {Bourgain, J.},
   title         = {On the spectrum of lattice {S}chr\"{o}dinger operators with deterministic potential},
   note          = {Dedicated to the memory of Thomas H. Wolff},
@@ -11578,33 +11605,6 @@
   mrreviewer    = {David\ Damanik},
   doi           = {10.1007/BF02868469},
   url           = {https://doi.org/10.1007/BF02868469}
-}
-@incollection{bourgain:02:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the distribution of {D}irichlet sums. {II}},
-  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
-  pages         = {87--109},
-  publisher     = {A K Peters, Natick, MA},
-  year          = {2002},
-  isbn          = {1-56881-126-8},
-  mrclass       = {11M26},
-  mrnumber      = {1956220},
-  mrreviewer    = {Jerzy\ Kaczorowski}
-}
-@article{bourgain:02:on*2,
-  author        = {Bourgain, J.},
-  title         = {On the distributions of the {F}ourier spectrum of {B}oolean functions},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {131},
-  year          = {2002},
-  pages         = {269--276},
-  issn          = {0021-2172,1565-8511},
-  mrclass       = {43A75 (42A38)},
-  mrnumber      = {1942312},
-  mrreviewer    = {Colin\ C.\ Graham},
-  doi           = {10.1007/BF02785861},
-  url           = {https://doi.org/10.1007/BF02785861}
 }
 @article{bourgain:02:on*3,
   author        = {Bourgain, Jean},
@@ -11670,23 +11670,7 @@
   doi           = {10.1007/978-3-540-36428-3\_8},
   url           = {https://doi.org/10.1007/978-3-540-36428-3_8}
 }
-@incollection{bourgain:03:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the isotropy-constant problem for ``{PSI}-2''-bodies},
-  booktitle     = {Geometric aspects of functional analysis},
-  series        = {Lecture Notes in Math.},
-  volume        = {1807},
-  pages         = {114--121},
-  publisher     = {Springer, Berlin},
-  year          = {2003},
-  isbn          = {3-540-00485-8},
-  mrclass       = {46B07 (46B20 52A20 60G15)},
-  mrnumber      = {2083391},
-  mrreviewer    = {Apostolos\ A.\ Giannopoulos},
-  doi           = {10.1007/978-3-540-36428-3\_9},
-  url           = {https://doi.org/10.1007/978-3-540-36428-3_9}
-}
-@article{bourgain:03:on*2,
+@article{bourgain:03:on*1,
   author        = {Bourgain, J.},
   title         = {On the {E}rd\H{o}s-{V}olkmann and {K}atz-{T}ao ring conjectures},
   journal       = {Geom. Funct. Anal.},
@@ -11701,6 +11685,22 @@
   mrreviewer    = {Ben\ Joseph\ Green},
   doi           = {10.1007/s000390300008},
   url           = {https://doi.org/10.1007/s000390300008}
+}
+@incollection{bourgain:03:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the isotropy-constant problem for ``{PSI}-2''-bodies},
+  booktitle     = {Geometric aspects of functional analysis},
+  series        = {Lecture Notes in Math.},
+  volume        = {1807},
+  pages         = {114--121},
+  publisher     = {Springer, Berlin},
+  year          = {2003},
+  isbn          = {3-540-00485-8},
+  mrclass       = {46B07 (46B20 52A20 60G15)},
+  mrnumber      = {2083391},
+  mrreviewer    = {Apostolos\ A.\ Giannopoulos},
+  doi           = {10.1007/978-3-540-36428-3\_9},
+  url           = {https://doi.org/10.1007/978-3-540-36428-3_9}
 }
 @incollection{bourgain:03:random,
   author        = {Bourgain, J.},
@@ -11751,22 +11751,6 @@
   url           = {https://doi.org/10.1016/j.crma.2004.03.027}
 }
 @incollection{bourgain:04:on,
-  author        = {Bourgain, J.},
-  title         = {On localization for lattice {S}chr\"{o}dinger operators involving {B}ernoulli variables},
-  booktitle     = {Geometric aspects of functional analysis},
-  series        = {Lecture Notes in Math.},
-  volume        = {1850},
-  pages         = {77--99},
-  publisher     = {Springer, Berlin},
-  year          = {2004},
-  isbn          = {3-540-22360-6},
-  mrclass       = {82B44 (47B39 47B80 47N55)},
-  mrnumber      = {2087153},
-  mrreviewer    = {David\ Damanik},
-  doi           = {10.1007/978-3-540-44489-3\_9},
-  url           = {https://doi.org/10.1007/978-3-540-44489-3_9}
-}
-@incollection{bourgain:04:on*1,
   author        = {Bourgain, Jean},
   title         = {On quasi-periodic lattice {S}chr\"{o}dinger operators},
   note          = {Partial differential equations and applications},
@@ -11781,6 +11765,22 @@
   mrnumber      = {2026184},
   doi           = {10.3934/dcds.2004.10.75},
   url           = {https://doi.org/10.3934/dcds.2004.10.75}
+}
+@incollection{bourgain:04:on*1,
+  author        = {Bourgain, J.},
+  title         = {On localization for lattice {S}chr\"{o}dinger operators involving {B}ernoulli variables},
+  booktitle     = {Geometric aspects of functional analysis},
+  series        = {Lecture Notes in Math.},
+  volume        = {1850},
+  pages         = {77--99},
+  publisher     = {Springer, Berlin},
+  year          = {2004},
+  isbn          = {3-540-22360-6},
+  mrclass       = {82B44 (47B39 47B80 47N55)},
+  mrnumber      = {2087153},
+  mrreviewer    = {David\ Damanik},
+  doi           = {10.1007/978-3-540-44489-3\_9},
+  url           = {https://doi.org/10.1007/978-3-540-44489-3_9}
 }
 @article{bourgain:04:remark,
   author        = {Bourgain, Jean},
@@ -12537,38 +12537,7 @@
   doi           = {10.1134/s0081543813010045},
   url           = {https://doi.org/10.1134/s0081543813010045}
 }
-@article{bourgain:13:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the correlation of the {M}oebius function with rank-one systems},
-  journal       = {J. Anal. Math.},
-  fjournal      = {Journal d'Analyse Math\'{e}matique},
-  volume        = {120},
-  year          = {2013},
-  pages         = {105--130},
-  issn          = {0021-7670,1565-8538},
-  mrclass       = {37A30 (11L20 11N37)},
-  mrnumber      = {3095150},
-  mrreviewer    = {Giulio\ Tiozzo},
-  doi           = {10.1007/s11854-013-0016-z},
-  url           = {https://doi.org/10.1007/s11854-013-0016-z}
-}
-@article{bourgain:13:on*2,
-  author        = {Bourgain, J.},
-  title         = {On the {F}ourier-{W}alsh spectrum of the {M}oebius function},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {197},
-  year          = {2013},
-  number        = {1},
-  pages         = {215--235},
-  issn          = {0021-2172,1565-8511},
-  mrclass       = {11F30},
-  mrnumber      = {3096614},
-  mrreviewer    = {Gergely\ Harcos},
-  doi           = {10.1007/s11856-013-0002-2},
-  url           = {https://doi.org/10.1007/s11856-013-0002-2}
-}
-@incollection{bourgain:13:on*3,
+@incollection{bourgain:13:on*1,
   author        = {Bourgain, J.},
   title         = {On the {L}yapunov exponents of {S}chr\"{o}dinger operators associated with the standard map},
   booktitle     = {Asymptotic geometric analysis},
@@ -12583,6 +12552,37 @@
   mrreviewer    = {Boris\ Hasselblatt},
   doi           = {10.1007/978-1-4614-6406-8\_3},
   url           = {https://doi.org/10.1007/978-1-4614-6406-8_3}
+}
+@article{bourgain:13:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the correlation of the {M}oebius function with rank-one systems},
+  journal       = {J. Anal. Math.},
+  fjournal      = {Journal d'Analyse Math\'{e}matique},
+  volume        = {120},
+  year          = {2013},
+  pages         = {105--130},
+  issn          = {0021-7670,1565-8538},
+  mrclass       = {37A30 (11L20 11N37)},
+  mrnumber      = {3095150},
+  mrreviewer    = {Giulio\ Tiozzo},
+  doi           = {10.1007/s11854-013-0016-z},
+  url           = {https://doi.org/10.1007/s11854-013-0016-z}
+}
+@article{bourgain:13:on*3,
+  author        = {Bourgain, J.},
+  title         = {On the {F}ourier-{W}alsh spectrum of the {M}oebius function},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {197},
+  year          = {2013},
+  number        = {1},
+  pages         = {215--235},
+  issn          = {0021-2172,1565-8511},
+  mrclass       = {11F30},
+  mrnumber      = {3096614},
+  mrreviewer    = {Gergely\ Harcos},
+  doi           = {10.1007/s11856-013-0002-2},
+  url           = {https://doi.org/10.1007/s11856-013-0002-2}
 }
 @article{bourgain:13:prescribing,
   author        = {Bourgain, Jean},
@@ -12660,23 +12660,7 @@
   mrnumber      = {3329846},
   mrreviewer    = {Brett\ D.\ Wick}
 }
-@article{bourgain:14:on*1,
-  author        = {Bourgain, Jean},
-  title         = {On the {H}ardy-{L}ittlewood maximal function for the cube},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {203},
-  year          = {2014},
-  number        = {1},
-  pages         = {275--293},
-  issn          = {0021-2172,1565-8511},
-  mrclass       = {42B25},
-  mrnumber      = {3273441},
-  mrreviewer    = {Javier\ P\'{e}rez L\'{a}zaro},
-  doi           = {10.1007/s11856-014-1059-2},
-  url           = {https://doi.org/10.1007/s11856-014-1059-2}
-}
-@incollection{bourgain:14:on*2,
+@incollection{bourgain:14:on*1,
   author        = {Bourgain, Jean},
   title         = {On eigenvalue spacings for the 1-{D} {A}nderson model with singular site distribution},
   booktitle     = {Geometric aspects of functional analysis},
@@ -12691,6 +12675,22 @@
   mrreviewer    = {Michael\ A.\ Perelmuter},
   doi           = {10.1007/978-3-319-09477-9\_6},
   url           = {https://doi.org/10.1007/978-3-319-09477-9_6}
+}
+@article{bourgain:14:on*2,
+  author        = {Bourgain, Jean},
+  title         = {On the {H}ardy-{L}ittlewood maximal function for the cube},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {203},
+  year          = {2014},
+  number        = {1},
+  pages         = {275--293},
+  issn          = {0021-2172,1565-8511},
+  mrclass       = {42B25},
+  mrnumber      = {3273441},
+  mrreviewer    = {Javier\ P\'{e}rez L\'{a}zaro},
+  doi           = {10.1007/s11856-014-1059-2},
+  url           = {https://doi.org/10.1007/s11856-014-1059-2}
 }
 @incollection{bourgain:14:on*3,
   author        = {Bourgain, Jean},
@@ -13354,20 +13354,6 @@
 }
 @article{bourgain:80:on,
   author        = {Bourgain, J.},
-  title         = {On lacunary sets},
-  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
-  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
-  volume        = {32},
-  year          = {1980},
-  number        = {1},
-  pages         = {29--32},
-  issn          = {0037-9476},
-  mrclass       = {05A99},
-  mrnumber      = {682989},
-  mrreviewer    = {J.\ Spencer}
-}
-@article{bourgain:80:on*1,
-  author        = {Bourgain, J.},
   title         = {On separable {B}anach spaces, universal for all separable reflexive spaces},
   journal       = {Proc. Amer. Math. Soc.},
   fjournal      = {Proceedings of the American Mathematical Society},
@@ -13381,6 +13367,20 @@
   mrreviewer    = {Zvi\ Altshuler},
   doi           = {10.2307/2043243},
   url           = {https://doi.org/10.2307/2043243}
+}
+@article{bourgain:80:on*1,
+  author        = {Bourgain, J.},
+  title         = {On lacunary sets},
+  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
+  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
+  volume        = {32},
+  year          = {1980},
+  number        = {1},
+  pages         = {29--32},
+  issn          = {0037-9476},
+  mrclass       = {05A99},
+  mrnumber      = {682989},
+  mrreviewer    = {J.\ Spencer}
 }
 @article{bourgain:80:on*2,
   author        = {Bourgain, J.},
@@ -14058,19 +14058,7 @@
   doi           = {10.1007/BF02392189},
   url           = {https://doi.org/10.1007/BF02392189}
 }
-@inproceedings{bourgain:84:on,
-  author        = {Bourgain, J.},
-  title         = {On nonisomorphisms of algebras of analytic functions},
-  booktitle     = {Proceedings of the second international conference on operator algebras, ideals, and their applications in theoretical physics ({L}eipzig, 1983)},
-  series        = {Teubner-Texte Math.},
-  volume        = {67},
-  pages         = {145--154},
-  publisher     = {Teubner, Leipzig},
-  year          = {1984},
-  mrclass       = {46J15 (32E25)},
-  mrnumber      = {763536}
-}
-@article{bourgain:84:on*1,
+@article{bourgain:84:on,
   author        = {Bourgain, J.},
   title         = {On bases in the disc algebra},
   journal       = {Trans. Amer. Math. Soc.},
@@ -14086,7 +14074,7 @@
   doi           = {10.2307/1999476},
   url           = {https://doi.org/10.2307/1999476}
 }
-@article{bourgain:84:on*2,
+@article{bourgain:84:on*1,
   author        = {Bourgain, J.},
   title         = {On martingales transforms in finite-dimensional lattices with an appendix on the {$K$}-convexity constant},
   journal       = {Math. Nachr.},
@@ -14100,6 +14088,18 @@
   mrreviewer    = {D.\ L.\ Burkholder},
   doi           = {10.1002/mana.19841190104},
   url           = {https://doi.org/10.1002/mana.19841190104}
+}
+@inproceedings{bourgain:84:on*2,
+  author        = {Bourgain, J.},
+  title         = {On nonisomorphisms of algebras of analytic functions},
+  booktitle     = {Proceedings of the second international conference on operator algebras, ideals, and their applications in theoretical physics ({L}eipzig, 1983)},
+  series        = {Teubner-Texte Math.},
+  volume        = {67},
+  pages         = {145--154},
+  publisher     = {Teubner, Leipzig},
+  year          = {1984},
+  mrclass       = {46J15 (32E25)},
+  mrnumber      = {763536}
 }
 @incollection{bourgain:84:propriete,
   author        = {Bourgain, Jean},
@@ -14127,18 +14127,6 @@
   mrreviewer    = {Colin\ C.\ Graham}
 }
 @incollection{bourgain:84:sur,
-  author        = {Bourgain, Jean},
-  title         = {Sur le minimum de certaines sommes de cosinus},
-  booktitle     = {Harmonic analysis: study group on translation-invariant {B}anach spaces},
-  series        = {Publ. Math. Orsay},
-  volume        = {84-1},
-  pages         = {Exp. No. 2, 7},
-  publisher     = {Univ. Paris XI, Orsay},
-  year          = {1984},
-  mrclass       = {11L03 (42A32)},
-  mrnumber      = {740713}
-}
-@incollection{bourgain:84:sur*1,
   author        = {Bourgain, J.},
   title         = {Sur l'approximation dans {$H^infty$}},
   booktitle     = {Seminar on the geometry of {B}anach spaces, {V}ol. {I}, {II} ({P}aris, 1983)},
@@ -14150,6 +14138,18 @@
   mrclass       = {30E10 (41A35 46J15)},
   mrnumber      = {781582},
   mrreviewer    = {Burglind\ J\"{o}ricke}
+}
+@incollection{bourgain:84:sur*1,
+  author        = {Bourgain, Jean},
+  title         = {Sur le minimum de certaines sommes de cosinus},
+  booktitle     = {Harmonic analysis: study group on translation-invariant {B}anach spaces},
+  series        = {Publ. Math. Orsay},
+  volume        = {84-1},
+  pages         = {Exp. No. 2, 7},
+  publisher     = {Univ. Paris XI, Orsay},
+  year          = {1984},
+  mrclass       = {11L03 (42A32)},
+  mrnumber      = {740713}
 }
 @incollection{bourgain:84:vector,
   author        = {Bourgain, J.},
@@ -14367,22 +14367,6 @@
 }
 @article{bourgain:86:on*1,
   author        = {Bourgain, J.},
-  title         = {On the similarity problem for polynomially bounded operators on {H}ilbert space},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {54},
-  year          = {1986},
-  number        = {2},
-  pages         = {227--241},
-  issn          = {0021-2172},
-  mrclass       = {47A65},
-  mrnumber      = {852479},
-  mrreviewer    = {Vern\ Paulsen},
-  doi           = {10.1007/BF02764943},
-  url           = {https://doi.org/10.1007/BF02764943}
-}
-@article{bourgain:86:on*2,
-  author        = {Bourgain, J.},
   title         = {On the {$L^p$}-bounds for maximal functions associated to convex bodies in {${\bf R}^n$}},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
@@ -14396,6 +14380,22 @@
   mrreviewer    = {Roger\ L.\ Jones},
   doi           = {10.1007/BF02764955},
   url           = {https://doi.org/10.1007/BF02764955}
+}
+@article{bourgain:86:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the similarity problem for polynomially bounded operators on {H}ilbert space},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {54},
+  year          = {1986},
+  number        = {2},
+  pages         = {227--241},
+  issn          = {0021-2172},
+  mrclass       = {47A65},
+  mrnumber      = {852479},
+  mrreviewer    = {Vern\ Paulsen},
+  doi           = {10.1007/BF02764943},
+  url           = {https://doi.org/10.1007/BF02764943}
 }
 @article{bourgain:86:on*3,
   author        = {Bourgain, J.},
@@ -14547,23 +14547,7 @@
   mrnumber      = {934289},
   mrreviewer    = {Alberto\ Torchinsky}
 }
-@incollection{bourgain:87:on,
-  author        = {Bourgain, J.},
-  title         = {On dimension free maximal inequalities for convex symmetric bodies in {${\bf R}^n$}},
-  booktitle     = {Geometrical aspects of functional analysis (1985/86)},
-  series        = {Lecture Notes in Math.},
-  volume        = {1267},
-  pages         = {168--176},
-  publisher     = {Springer, Berlin},
-  year          = {1987},
-  isbn          = {3-540-18103-2},
-  mrclass       = {42B25 (42B15)},
-  mrnumber      = {907693},
-  mrreviewer    = {Roger\ L.\ Jones},
-  doi           = {10.1007/BFb0078144},
-  url           = {https://doi.org/10.1007/BFb0078144}
-}
-@article{bourgain:87:on*1,
+@article{bourgain:87:on,
   author        = {Bourgain, J.},
   title         = {On the {H}ausdorff dimension of harmonic measure in higher dimension},
   journal       = {Invent. Math.},
@@ -14579,7 +14563,7 @@
   doi           = {10.1007/BF01389238},
   url           = {https://doi.org/10.1007/BF01389238}
 }
-@incollection{bourgain:87:on*2,
+@incollection{bourgain:87:on*1,
   author        = {Bourgain, J.},
   title         = {On lattice packing of convex symmetric sets in {${\bf R}^n$}},
   booktitle     = {Geometrical aspects of functional analysis (1985/86)},
@@ -14594,6 +14578,22 @@
   mrreviewer    = {J.\ M.\ Wills},
   doi           = {10.1007/BFb0078132},
   url           = {https://doi.org/10.1007/BFb0078132}
+}
+@incollection{bourgain:87:on*2,
+  author        = {Bourgain, J.},
+  title         = {On dimension free maximal inequalities for convex symmetric bodies in {${\bf R}^n$}},
+  booktitle     = {Geometrical aspects of functional analysis (1985/86)},
+  series        = {Lecture Notes in Math.},
+  volume        = {1267},
+  pages         = {168--176},
+  publisher     = {Springer, Berlin},
+  year          = {1987},
+  isbn          = {3-540-18103-2},
+  mrclass       = {42B25 (42B15)},
+  mrnumber      = {907693},
+  mrreviewer    = {Roger\ L.\ Jones},
+  doi           = {10.1007/BFb0078144},
+  url           = {https://doi.org/10.1007/BFb0078144}
 }
 @article{bourgain:87:on*3,
   author        = {Bourgain, Jean},
@@ -14708,6 +14708,22 @@
 }
 @article{bourgain:88:on,
   author        = {Bourgain, J.},
+  title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {61},
+  year          = {1988},
+  number        = {1},
+  pages         = {73--84},
+  issn          = {0021-2172},
+  mrclass       = {28D05},
+  mrnumber      = {937582},
+  mrreviewer    = {Alberto\ de la Torre},
+  doi           = {10.1007/BF02776302},
+  url           = {https://doi.org/10.1007/BF02776302}
+}
+@article{bourgain:88:on*1,
+  author        = {Bourgain, J.},
   title         = {On the maximal ergodic theorem for certain subsets of the integers},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
@@ -14722,7 +14738,7 @@
   doi           = {10.1007/BF02776301},
   url           = {https://doi.org/10.1007/BF02776301}
 }
-@incollection{bourgain:88:on*1,
+@incollection{bourgain:88:on*2,
   author        = {Bourgain, J.},
   title         = {On finite-dimensional homogeneous {B}anach spaces},
   booktitle     = {Geometric aspects of functional analysis (1986/87)},
@@ -14737,22 +14753,6 @@
   mrreviewer    = {T.\ Figiel},
   doi           = {10.1007/BFb0081744},
   url           = {https://doi.org/10.1007/BFb0081744}
-}
-@article{bourgain:88:on*2,
-  author        = {Bourgain, J.},
-  title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {61},
-  year          = {1988},
-  number        = {1},
-  pages         = {73--84},
-  issn          = {0021-2172},
-  mrclass       = {28D05},
-  mrnumber      = {937582},
-  mrreviewer    = {Alberto\ de la Torre},
-  doi           = {10.1007/BF02776302},
-  url           = {https://doi.org/10.1007/BF02776302}
 }
 @article{bourgain:88:remark,
   author        = {Bourgain, J.},
@@ -15035,23 +15035,7 @@
   doi           = {10.1007/BFb0089219},
   url           = {https://doi.org/10.1007/BFb0089219}
 }
-@article{bourgain:91:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the {B}usemann-{P}etty problem for perturbations of the ball},
-  journal       = {Geom. Funct. Anal.},
-  fjournal      = {Geometric and Functional Analysis},
-  volume        = {1},
-  year          = {1991},
-  number        = {1},
-  pages         = {1--13},
-  issn          = {1016-443X,1420-8970},
-  mrclass       = {52A38},
-  mrnumber      = {1091609},
-  mrreviewer    = {W.\ J.\ Firey},
-  doi           = {10.1007/BF01895416},
-  url           = {https://doi.org/10.1007/BF01895416}
-}
-@incollection{bourgain:91:on*2,
+@incollection{bourgain:91:on*1,
   author        = {Bourgain, Jean},
   title         = {On the restriction and multiplier problems in {${\bf R}^3$}},
   booktitle     = {Geometric aspects of functional analysis (1989--90)},
@@ -15066,6 +15050,22 @@
   mrreviewer    = {Peter\ I.\ Lizorkin},
   doi           = {10.1007/BFb0089225},
   url           = {https://doi.org/10.1007/BFb0089225}
+}
+@article{bourgain:91:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the {B}usemann-{P}etty problem for perturbations of the ball},
+  journal       = {Geom. Funct. Anal.},
+  fjournal      = {Geometric and Functional Analysis},
+  volume        = {1},
+  year          = {1991},
+  number        = {1},
+  pages         = {1--13},
+  issn          = {1016-443X,1420-8970},
+  mrclass       = {52A38},
+  mrnumber      = {1091609},
+  mrreviewer    = {W.\ J.\ Firey},
+  doi           = {10.1007/BF01895416},
+  url           = {https://doi.org/10.1007/BF01895416}
 }
 @incollection{bourgain:91:remarks,
   author        = {Bourgain, J.},
@@ -18550,20 +18550,6 @@
 }
 @article{carmona.nualart:88:random,
   author        = {Carmona, Ren\'{e} and Nualart, David},
-  title         = {Random nonlinear wave equations: propagation of singularities},
-  journal       = {Ann. Probab.},
-  fjournal      = {The Annals of Probability},
-  volume        = {16},
-  year          = {1988},
-  number        = {2},
-  pages         = {730--751},
-  issn          = {0091-1798},
-  mrclass       = {60H15 (35L05 35R60)},
-  mrnumber      = {929075},
-  url           = {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
-}
-@article{carmona.nualart:88:random*1,
-  author        = {Carmona, Ren\'{e} and Nualart, David},
   title         = {Random nonlinear wave equations: smoothness of the solutions},
   journal       = {Probab. Theory Related Fields},
   fjournal      = {Probability Theory and Related Fields},
@@ -18577,6 +18563,20 @@
   mrreviewer    = {M. Zakai},
   doi           = {10.1007/BF00318783},
   url           = {https://doi.org/10.1007/BF00318783}
+}
+@article{carmona.nualart:88:random*1,
+  author        = {Carmona, Ren\'{e} and Nualart, David},
+  title         = {Random nonlinear wave equations: propagation of singularities},
+  journal       = {Ann. Probab.},
+  fjournal      = {The Annals of Probability},
+  volume        = {16},
+  year          = {1988},
+  number        = {2},
+  pages         = {730--751},
+  issn          = {0091-1798},
+  mrclass       = {60H15 (35L05 35R60)},
+  mrnumber      = {929075},
+  url           = {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
 }
 @book{carmona.nualart:90:nonlinear,
   author        = {Carmona, Ren\'{e} A. and Nualart, David},
@@ -21160,20 +21160,7 @@
   doi           = {10.1016/S0167-7152(99)00163-7},
   url           = {https://doi.org/10.1016/S0167-7152(99)00163-7}
 }
-@incollection{chen:00:on,
-  author        = {Chen, Xia},
-  title         = {On the law of the iterated logarithm for local times of recurrent random walks},
-  booktitle     = {High dimensional probability, {II} ({S}eattle, {WA}, 1999)},
-  series        = {Progr. Probab.},
-  volume        = {47},
-  pages         = {249--259},
-  publisher     = {Birkh\"{a}user Boston, Boston, MA},
-  year          = {2000},
-  mrclass       = {60F15 (60J55)},
-  mrnumber      = {1857326},
-  mrreviewer    = {Ingemar Kaj}
-}
-@article{chen:00:on*1,
+@article{chen:00:on,
   author        = {Chen, Xia},
   title         = {On the limit laws of the second order for additive functionals of {H}arris recurrent {M}arkov chains},
   journal       = {Probab. Theory Related Fields},
@@ -21187,6 +21174,19 @@
   mrnumber      = {1736591},
   doi           = {10.1007/PL00008724},
   url           = {https://doi.org/10.1007/PL00008724}
+}
+@incollection{chen:00:on*1,
+  author        = {Chen, Xia},
+  title         = {On the law of the iterated logarithm for local times of recurrent random walks},
+  booktitle     = {High dimensional probability, {II} ({S}eattle, {WA}, 1999)},
+  series        = {Progr. Probab.},
+  volume        = {47},
+  pages         = {249--259},
+  publisher     = {Birkh\"{a}user Boston, Boston, MA},
+  year          = {2000},
+  mrclass       = {60F15 (60J55)},
+  mrnumber      = {1857326},
+  mrreviewer    = {Ingemar Kaj}
 }
 @article{chen:01:exact,
   author        = {Chen, Xia},
@@ -21553,6 +21553,16 @@
   doi           = {10.1214/19-AIHP983},
   url           = {https://doi.org/10.1214/19-AIHP983}
 }
+@misc{chen:23:open,
+  author        = {Le Chen},
+  title         = {Open slides for linear algebra},
+  month         = {nov},
+  year          = {2023},
+  publisher     = {GitHub \& Zenodo},
+  journal       = {GitHub repository},
+  doi           = {10.5281/zenodo.10206020},
+  url           = {https://doi.org/10.5281/zenodo.10206020}
+}
 @misc{chen:23:some,
   author        = {Le Chen},
   title         = {Some symbolic tools for the Fox {$H$}-function},
@@ -21572,6 +21582,16 @@
   journal       = {GitHub repository},
   doi           = {10.5281/zenodo.10143431},
   url           = {https://doi.org/10.5281/zenodo.10143431}
+}
+@misc{chen:23:statistics,
+  author        = {Le Chen},
+  title         = {Statistics: Open Slides},
+  month         = {nov},
+  year          = {2023},
+  publisher     = {GitHub \& Zenodo},
+  journal       = {GitHub repository},
+  doi           = {10.5281/zenodo.10206720},
+  url           = {https://doi.org/10.5281/zenodo.10206720}
 }
 @article{chen:90:moderate,
   author        = {Chen, Xia},
@@ -28436,18 +28456,6 @@
 }
 @book{dunford.schwartz:88:linear,
   author        = {Dunford, Nelson and Schwartz, Jacob T.},
-  title         = {Linear operators. {P}art {I}},
-  series        = {Wiley Classics Library},
-  note          = {General theory, With the assistance of William G. Bade and Robert G. Bartle, Reprint of the 1958 original, A Wiley-Interscience Publication},
-  publisher     = {John Wiley \& Sons, Inc., New York},
-  year          = {1988},
-  pages         = {xiv+858},
-  isbn          = {0-471-60848-3},
-  mrclass       = {47-01 (46-01)},
-  mrnumber      = {1009162}
-}
-@book{dunford.schwartz:88:linear*1,
-  author        = {Dunford, Nelson and Schwartz, Jacob T.},
   title         = {Linear operators. {P}art {II}},
   series        = {Wiley Classics Library},
   note          = {Spectral theory. Selfadjoint operators in Hilbert space, With the assistance of William G. Bade and Robert G. Bartle, Reprint of the 1963 original, A Wiley-Interscience Publication},
@@ -28457,6 +28465,18 @@
   isbn          = {0-471-60847-5},
   mrclass       = {47-01 (46-01)},
   mrnumber      = {1009163}
+}
+@book{dunford.schwartz:88:linear*1,
+  author        = {Dunford, Nelson and Schwartz, Jacob T.},
+  title         = {Linear operators. {P}art {I}},
+  series        = {Wiley Classics Library},
+  note          = {General theory, With the assistance of William G. Bade and Robert G. Bartle, Reprint of the 1958 original, A Wiley-Interscience Publication},
+  publisher     = {John Wiley \& Sons, Inc., New York},
+  year          = {1988},
+  pages         = {xiv+858},
+  isbn          = {0-471-60848-3},
+  mrclass       = {47-01 (46-01)},
+  mrnumber      = {1009162}
 }
 @article{dunlap.gu.ea:20:fluctuations,
   author        = {Dunlap, Alexander and Gu, Yu and Ryzhik, Lenya and Zeitouni, Ofer},
@@ -36817,7 +36837,23 @@
   mrnumber      = {1294070},
   url           = {http://links.jstor.org/sici?sici=0162-1459(199406)89:426<368:AATSSM>2.0.CO;2-Z&origin=MSN}
 }
-@incollection{hara.slade:00:scaling,
+@article{hara.slade:00:scaling,
+  author        = {Hara, Takashi and Slade, Gordon},
+  title         = {The scaling limit of the incipient infinite cluster in high-dimensional percolation. {I}. {C}ritical exponents},
+  journal       = {J. Statist. Phys.},
+  fjournal      = {Journal of Statistical Physics},
+  volume        = {99},
+  year          = {2000},
+  number        = {5-6},
+  pages         = {1075--1168},
+  issn          = {0022-4715},
+  mrclass       = {82B43 (60K35)},
+  mrnumber      = {1773141},
+  mrreviewer    = {Remco van der Hofstad},
+  doi           = {10.1023/A:1018628503898},
+  url           = {https://doi.org/10.1023/A:1018628503898}
+}
+@incollection{hara.slade:00:scaling*1,
   author        = {Hara, Takashi and Slade, Gordon},
   title         = {The scaling limit of the incipient infinite cluster in high-dimensional percolation. {II}. {I}ntegrated super-{B}rownian excursion},
   note          = {Probabilistic techniques in equilibrium and nonequilibrium statistical physics},
@@ -36833,22 +36869,6 @@
   mrreviewer    = {Remco van der Hofstad},
   doi           = {10.1063/1.533186},
   url           = {https://doi.org/10.1063/1.533186}
-}
-@article{hara.slade:00:scaling*1,
-  author        = {Hara, Takashi and Slade, Gordon},
-  title         = {The scaling limit of the incipient infinite cluster in high-dimensional percolation. {I}. {C}ritical exponents},
-  journal       = {J. Statist. Phys.},
-  fjournal      = {Journal of Statistical Physics},
-  volume        = {99},
-  year          = {2000},
-  number        = {5-6},
-  pages         = {1075--1168},
-  issn          = {0022-4715},
-  mrclass       = {82B43 (60K35)},
-  mrnumber      = {1773141},
-  mrreviewer    = {Remco van der Hofstad},
-  doi           = {10.1023/A:1018628503898},
-  url           = {https://doi.org/10.1023/A:1018628503898}
 }
 @article{hara.slade:91:critical,
   author        = {Hara, Takashi and Slade, Gordon},
@@ -60955,22 +60975,6 @@
 }
 @article{seppalainen:93:large,
   author        = {Sepp\"{a}l\"{a}inen, Timo},
-  title         = {Large deviations for lattice systems. {II}. {N}onstationary independent fields},
-  journal       = {Probab. Theory Related Fields},
-  fjournal      = {Probability Theory and Related Fields},
-  volume        = {97},
-  year          = {1993},
-  number        = {1-2},
-  pages         = {103--112},
-  issn          = {0178-8051},
-  mrclass       = {60F10 (60G60)},
-  mrnumber      = {1240718},
-  mrreviewer    = {Francis Comets},
-  doi           = {10.1007/BF01199314},
-  url           = {https://doi.org/10.1007/BF01199314}
-}
-@article{seppalainen:93:large*1,
-  author        = {Sepp\"{a}l\"{a}inen, Timo},
   title         = {Large deviations for lattice systems. {I}. {P}arametrized independent fields},
   journal       = {Probab. Theory Related Fields},
   fjournal      = {Probability Theory and Related Fields},
@@ -60984,6 +60988,22 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/BF01192135},
   url           = {https://doi.org/10.1007/BF01192135}
+}
+@article{seppalainen:93:large*1,
+  author        = {Sepp\"{a}l\"{a}inen, Timo},
+  title         = {Large deviations for lattice systems. {II}. {N}onstationary independent fields},
+  journal       = {Probab. Theory Related Fields},
+  fjournal      = {Probability Theory and Related Fields},
+  volume        = {97},
+  year          = {1993},
+  number        = {1-2},
+  pages         = {103--112},
+  issn          = {0178-8051},
+  mrclass       = {60F10 (60G60)},
+  mrnumber      = {1240718},
+  mrreviewer    = {Francis Comets},
+  doi           = {10.1007/BF01199314},
+  url           = {https://doi.org/10.1007/BF01199314}
 }
 @article{seppalainen:94:large,
   author        = {Sepp\"{a}l\"{a}inen, Timo},
@@ -62902,21 +62922,6 @@
 }
 @article{talagrand:06:parisi,
   author        = {Talagrand, Michel},
-  title         = {Parisi measures},
-  journal       = {J. Funct. Anal.},
-  fjournal      = {Journal of Functional Analysis},
-  volume        = {231},
-  year          = {2006},
-  number        = {2},
-  pages         = {269--286},
-  issn          = {0022-1236},
-  mrclass       = {82B44 (28A33 82D30)},
-  mrnumber      = {2195333},
-  doi           = {10.1016/j.jfa.2005.03.001},
-  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
-}
-@article{talagrand:06:parisi*1,
-  author        = {Talagrand, Michel},
   title         = {The {P}arisi formula},
   journal       = {Ann. of Math. (2)},
   fjournal      = {Annals of Mathematics. Second Series},
@@ -62930,6 +62935,21 @@
   mrreviewer    = {Fran\c{c}ois Germinet},
   doi           = {10.4007/annals.2006.163.221},
   url           = {https://doi.org/10.4007/annals.2006.163.221}
+}
+@article{talagrand:06:parisi*1,
+  author        = {Talagrand, Michel},
+  title         = {Parisi measures},
+  journal       = {J. Funct. Anal.},
+  fjournal      = {Journal of Functional Analysis},
+  volume        = {231},
+  year          = {2006},
+  number        = {2},
+  pages         = {269--286},
+  issn          = {0022-1236},
+  mrclass       = {82B44 (28A33 82D30)},
+  mrnumber      = {2195333},
+  doi           = {10.1016/j.jfa.2005.03.001},
+  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
 }
 @article{talagrand:10:construction,
   author        = {Talagrand, Michel},
